--- a/src/Properties/Resources.resx
+++ b/src/Properties/Resources.resx
@@ -134,7 +134,7 @@
     <value>..\Resources\excelbw.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="EXCEL_INFO_FILTER" xml:space="preserve">
-    <value>Excel Spreadsheet (*.xlsm)|*.xlsm|All files (*.*)|*.*</value>
+    <value>All files (*.*)|*.*</value>
   </data>
   <data name="filter" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\filter.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
